# xrpm

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  xrpm
xrpm/: __init__.py  data.py  utils.py
xrpm/commands/: __init__.py  convert.py  delete.py  save.py  set.py  status.py
