[project]
name = "xrpm"
description = "XRandr Profile Manager"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
]

[project.scripts]
xrpm = "xrpm:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "xrpm",
    "xrpm.commands",
]
