[project]
name = "xrpm"
description = "XRandr Profile Manager"
version = "2.1"
requires-python = ">=3.11"
dependencies = [
    "pyedid ~= 1.0.3",
    "pydantic ~= 1.10.2",
]

[project.scripts]
xrpm = "xrpm:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "xrpm",
    "xrpm.commands",
]

[tool.pyright]
reportMissingImports = true
reportMissingTypeStubs = true
typeCheckingMode = "strict"
reportMissingModuleSource = false

[tool.black]
line-length = 79

[tool.pylint.'MESSAGES CONTROL']
disable = "missing-class-docstring,missing-function-docstring,missing-module-docstring,too-few-public-methods,unspecified-encoding"
